Fixing broken last commit

--- a/index.html
+++ b/index.html
@@ -59,38 +59,42 @@
                   </p>
                   <div class="filters">
                      <div class="filter-section">
-                        <h3
-                           style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
-                           Asset Type
-                        </h3>
-                        <div class="options">
-                           <label>
-                           <input type="radio" name="type" value="all">
+                       <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
+                         Asset Type</h3>
+                       <div class="options">
+                         <label>
+                           <input type="radio" name="type" value="all" checked="">
                            <span>All</span>
-                           </label>
-                           <label>
-                           <input type="radio" name="type" value="community-day" checked>
+                         </label>
+                         <label>
+                           <input type="radio" name="type" value="community-day">
                            <span>Community Day</span>
-                           </label>
-                           <label>
+                         </label>
+                         <label>
                            <input type="radio" name="type" value="special-event">
                            <span>Special Events</span>
-                           </label>
-                        </div>
+                         </label>
+                         <label>
+                           <input type="radio" name="type" value="external">
+                           <span>External Asset Resources</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="type" value="general">
+                           <span>General Resources</span>
+                         </label>
+                       </div>
                      </div>
                      <div class="filter-section">
-                        <h3
-                           style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
-                           Year
-                        </h3>
-                        <div class="options">
-                           <label>
-                           <input type="radio" name="date" value="2023" checked>
+                       <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
+                         Year</h3>
+                       <div class="options">
+                         <label>
+                           <input type="radio" name="date" value="2023" checked="">
                            <span>2023</span>
-                           </label>
-                        </div>
+                         </label>
+                       </div>
                      </div>
-                  </div>
+                   </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
                      <!-- Start Axew Day -->
@@ -177,18 +181,20 @@
                      </div>
                      <!-- End Axew Day -->
                      <!-- Start keridel's Keychains -->
-                     <div class="asset-section" data-type="league-archive">
+                     <div class="asset-section" data-type="external">
                         <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/model/404207-team-mystic-keyring">keridel's</a> Team Keychains</span></h5>
                         <p>A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
                         <div class="assetGroup">
                            
-                           <div>
+                           <div class="asset">
                               <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
                               <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
+                              <div class="printables-label">
+                                 <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
+                              </div>
                               <label>Team Instinct</label>
                               </a><p>Placeholder Text</p>
-                              
                            </div>
                            <div>
                               <a href="https://www.printables.com/model/404207-team-mystic-keyring" target="_blank">
@@ -208,7 +214,7 @@
                      </div>
                      <!-- End keridel's Keychains -->
                      <!-- Start Silph Assets -->
-                     <div class="asset-section" data-type="league-archive">
+                     <div class="asset-section" data-type="external">
                         <h5>Asseet Resource: <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
                         <p>While TheSilphRoad was still running, they would regularly publish assets for community members to use, while they are no longer publishing assets their previously published assets could still be of use and were published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means you can use the resources however you want as long as it's not for commercial purposes, and that you share alike.</p>
                         <div class="assetGroup">
