It's still buggy, testing a new way and tweaking intro paragraph so it's not so awkward

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                      Free Graphics for Your Meetups and More!
                   </h3>
                   <p style="margin-bottom:10px;text-align: left;">
-                     Welcome to the PoGo Community Checkpoint Assets page. Here we will keep a full archive of the assets we publish! All assets are published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license; ie, for non-commercial use only unless stated otherwise on an individual asset level. In addition to our own own published assets, we will also occasionally link to other assets published elsewhere on the web we believe will be useful for communty leaders. We ask that you respect the licensing terms of those artists that have published their work when we do this!
+                     Welcome to the PoGo Community Checkpoint Assets page! This is where we maintain a comprehensive archive of the assets we share. All our assets are published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means they are for non-commercial use only, unless stated otherwise on an individual asset level. In addition to our own published assets, we occasionally provide links to other valuable assets published elsewhere on the web, benefiting community leaders. We kindly request that you honor the licensing terms set by the artists who have shared their work when accessing such resources.
                   </p>
                   <div class="filters">
                      <div class="filter-section">
@@ -71,16 +71,8 @@
                            <span>Community Day</span>
                          </label>
                          <label>
-                           <input type="radio" name="type" value="special-event">
-                           <span>Special Events</span>
-                         </label>
-                         <label>
                            <input type="radio" name="type" value="external">
                            <span>External Asset Resources</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="type" value="general">
-                           <span>General Resources</span>
                          </label>
                        </div>
                      </div>
@@ -181,7 +173,7 @@
                      </div>
                      <!-- End Axew Day -->
                      <!-- Start keridel's Keychains -->
-                     <div class="asset-section" data-type="external">
+                     <div class="asset-section" data-type="community-day" >
                         <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/model/404207-team-mystic-keyring">keridel's</a> Team Keychains</span></h5>
                         <p>A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
@@ -243,7 +235,7 @@
          <div id="footer"
             style="text-align:center;font-size:11px;margin:30px 0;text-shadow: 0 0 5px #a8824e;color: rgba(255, 255, 255, 0.68);">
             ©2023 PoGo Community Checkpoint | All Rights Reserved | <a href="https://twitter.com/PoGoCheckpoint"
-               target="_blank">@TheSilphRoad</a> | <a href="https://pogo.community"
+               target="_blank">@PoGoCheckpoint</a> | <a href="https://pogo.community"
                target="_blank">PoGo.Community</a>
             <br>
             Pokémon And All Respective Names are Trademark &amp; © of Nintendo 1996-2018
