That didn't work either... let's throw something at the wall to see if it sticks

--- a/index.html
+++ b/index.html
@@ -172,24 +172,37 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Axew Day -->
-                     <!-- Start Keridel's Keychains -->
-                     <div class="asset-section" data-type="external-assets">
-                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/model/404207-team-mystic-keyring">keridel's</a> Team Keychains</span></h5>
+                     <!-- Start Axew Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2023">
+                        <h5>Meetup Event: <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
+                        </h5>
+                        <h6>PoGo Community Checkpoint's First Ever Asset Drop!</h6>
                         <p>
-                           A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
+                           PoGo Community Checkpoint (PGCC) is proud to present our first asset drop! The June <a href="https://pokemongolive.com/post/communityday-june-2023-axew" target="_blank">Global Community Day</a> is
+                           featuring Axew! The Community Day badge design this month was contributed by xLuximityx (7 Pidgeys/USA)! We thank them for their contribution! If you'd like to contribute any assets to our drops check <a href="https://discord.com/channels/356458569069101058/1107742441471234118">#the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN">Discord server</a>
                         </p>
-                        
+                        <h4>
+                           Credits
+                        </h4>
+                        <ul>
+                           <li>
+                              Badge Design -:- <a href="https://www.instagram.com/x_lux.da.alien_x/">x_lux.da.alien_x</a>
+                           </li>
+                           <li>
+                              Community Day Badge Base Design -:- <a href="https://assets.sil.ph/silph-league/">Silph League Assets</a>
+                           </li>
+                           <li>
+                              Haxorus Sprite -:- <a href="https://www.deviantart.com/kamiwasa">KamiWasa</a> (Shiny edit: <a href="https://www.instagram.com/x_lux.da.alien_x/">x_lux.da.alien_x</a>)
+                           </li>
+                           <li>
+                              Axew Coin -:- <a href="https://social.pogo.community/@forte">@Forte@social.pogo.community</a>
+                           </li>
+                        </ul>
                         <div class="assetGroup">
-                           <div class="asset">
-                              <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
-                                  <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
-                                  <div class="printables-label">
-                                      <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
-                                  </div>
-                                  <label>Team Instinct</label>
-                              </a>
-                              <p>Placeholder Text</p>
-                          </div>
+                           <div><a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadge.png" target="_blank">
+                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadge.png" class="artistLuximity">
+                                    <label>Badge</label>
+                              </a></div>
                            <div>
                               <a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadgeBanner.png" target="_blank">
                                     <img src="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadgeBanner.png" class="artistLuximity">
@@ -241,7 +254,8 @@
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
-                     <!-- End Keridel's Keychains -->
+                     <!-- End Axew Day -->
+                     
                   </div>
                </div>
             </div>
