Okay, removing the year is what broke it, so let's try to put the year options back and see if that changes anything...

--- a/index.html
+++ b/index.html
@@ -80,9 +80,29 @@
                        <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
                          Year</h3>
                        <div class="options">
-                         <label>
-                           <input type="radio" name="date" value="2023" checked="">
+                        <label>
+                           <input type="radio" name="date" value="2023" checked>
                            <span>2023</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="date" value="2022">
+                           <span>2022</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="date" value="2021">
+                           <span>2021</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="date" value="2020">
+                           <span>2020</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="date" value="2019">
+                           <span>2019</span>
+                         </label>
+                         <label>
+                           <input type="radio" name="date" value="2018">
+                           <span>2018</span>
                          </label>
                        </div>
                      </div>
