that didn't work, let's try to move this back to the "league" data type

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                      </div>
                      <!-- End Axew Day -->
                      <!-- Start Axew Day -->
-                     <div class="asset-section" data-type="community-day">
+                     <div class="asset-section" data-type="league">
                         <h5>Meetup Event: <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
                         </h5>
                         <h6>PoGo Community Checkpoint's First Ever Asset Drop!</h6>
