Okay, now that it's working.. let's try to put the other asset groups back in

--- a/index.html
+++ b/index.html
@@ -192,88 +192,65 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Axew Day -->
-                     <!-- Start Axew Day -->
-                     <div class="asset-section" data-type="general">
-                        <h5>Meetup Event: <span style="font-family:'texgyreadventorregular';">June 2023 Community Day</span>
-                        </h5>
-                        <h6>PoGo Community Checkpoint's First Ever Asset Drop!</h6>
-                        <p>
-                           test placeholder
+                     <!-- Start keridel's Keychains -->
+                     <div class="asset-section" data-type="external">
+                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';"><a href="https://www.printables.com/model/404207-team-mystic-keyring">keridel's</a> Team Keychains</span></h5>
+                        <p>A set of models designed to be 3D Printed representing each of the team logos. Combine with a wrist strap keychain and you can these can make wonderful additions to your community prize pool
                         </p>
-                        <h4>
-                           Credits
-                        </h4>
-                        <ul>
-                           <li>
-                              Badge Design -:- <a href="https://www.instagram.com/x_lux.da.alien_x/">x_lux.da.alien_x</a>
-                           </li>
-                           <li>
-                              Community Day Badge Base Design -:- <a href="https://assets.sil.ph/silph-league/">Silph League Assets</a>
-                           </li>
-                           <li>
-                              Haxorus Sprite -:- <a href="https://www.deviantart.com/kamiwasa">KamiWasa</a> (Shiny edit: <a href="https://www.instagram.com/x_lux.da.alien_x/">x_lux.da.alien_x</a>)
-                           </li>
-                           <li>
-                              Axew Coin -:- <a href="https://social.pogo.community/@forte">@Forte@social.pogo.community</a>
-                           </li>
-                        </ul>
                         <div class="assetGroup">
-                           <div><a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadge.png" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadge.png" class="artistLuximity">
-                                    <label>Badge</label>
-                              </a></div>
-                           <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadgeBanner.png" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadgeBanner.png" class="artistLuximity">
-                                    <label>Badge Banner</label>
+
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
+                              <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
+                              <div class="printables-label">
+                                 <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
+                              </div>
+                              <label>Team Instinct</label>
+                              </a><p>Placeholder Text</p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
+                                <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
+                                <div class="printables-link">
+                                  <img src="https://www.printables.com/favicon.ico" alt="Overlay Label">
+                                </div>
+                                <label>Team Instinct</label>
                               </a>
+                              <p>Placeholder Text</p>
+                            </div>
+                        <div>
+                              <a href="https://www.printables.com/model/404208-team-valor-keyring" target="_blank">
+                              <img src="https://media.printables.com/media/prints/404208/images/3365826_3dd6a91f-01bb-4c07-903d-b86ba5249432/thumbs/inside/1280x960/jpg/3362d654b5aead3a09b53040414ef73c_display_large_404208.webp">
+                              <label>Team Valor</label>
+                              </a>
+                              <p>Placeholder Text</p>
+                           </div></div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End keridel's Keychains -->
+                     <!-- Start Silph Assets -->
+                     <div class="asset-section" data-type="external">
+                        <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
+                        <p>While TheSilphRoad was still running, they would regularly publish assets for community members to use, while they are no longer publishing assets their previously published assets could still be of use and were published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means you can use the resources however you want as long as it's not for commercial purposes, and that you share alike.</p>
+                        <div class="assetGroup">
+                           <div>
+                              <a href="https://assets.sil.ph/silph-league/" target="_blank">
+                              <img src="./assets/silph/LeagueSite.jpeg">
+                              <label>Silph League Assets</label>
+                              </a>
+                              <p>Primarily providing assets for in-person community events</p>
                            </div>
                            <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadge.psd" target="_blank">
-                                    <img src="./img/photoshop-icon.png" class="artistLuximity psdfileIcon">
-                                    <label>Badge PSD</label>
+                              <a href="https://assets.sil.ph/silph-arena/" target="_blank">
+                              <img src="./assets/silph/ArenaSite.jpeg">
+                              <label>Silph Arena Assets</label>
                               </a>
-                           </div>
-                           <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_HaxorusBadgeBanner.psd" target="_blank">
-                                    <img src="./img/photoshop-icon.png" class="psdfileIcon">
-                                    <label>Badge Banner psd</label>
-                              </a>
-                           </div>
-                           <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_DiscordEventBanner.jpg" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_DiscordEventBanner.jpg" class="artistLuximity discordEventBanner">
-                                    <label>Discord Event Banner</label>
-                              </a>
-                           </div>
-                           <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_FacebookEventBanner.jpg" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_FacebookEventBanner.jpg" class="artistLuximity facebookEventBanner">
-                                    <label>Facebook Event Banner</label>
-                              </a>
-                           </div>
-                           <div>
-                              <a href="./assets/2023/2023-06-10-community-day/2023-06-10_FacebookEventBanner.jpg" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_FacebookEventBanner.jpg" class="artistLuximity facebookImagePost">
-                                    <label>Facebook Image Post</label>
-                              </a>
-                           </div>
-                           <div>
-                              <a href="https://www.printables.com/model/501452-axew-community-day-coin-june-2023" target="_blank">
-                                    <img src="./assets/2023/2023-06-10-community-day/2023-06-10_PrintedCoin.jpg" class="artistForte modelLink">
-                                    <label>Axew Day Coin by Forte</label>
-                              </a>
-                           </div>
-                           <div>
-                              <a href="https://drive.google.com/drive/folders/1-jNqi_mEj8ZuxLC4_Hc0W-XpWVGJDcyn?usp=sharing" target="_blank">
-                                    <img src="./img/gdrive-folder-icon.png" class="driveLink">
-                                    <label>Google Drive Asset Folder (Contains more alternative versions)</label>
-                              </a>
+                              <p>Primarily providing assets for grassroots PvP events</p>
                            </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
-                     <!-- End Axew Day -->
+                     <!-- End Silph Assets -->
                      
                   </div>
                </div>
