changing this to be an asset label, and adding that to all the Printables assets

--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@
                                     <label>Facebook Image Post</label>
                               </a>
                            </div>
-                           <div>
+                           <div class="asset">
                               <a href="https://www.printables.com/model/501452-axew-community-day-coin-june-2023" target="_blank">
                                     <img src="./assets/2023/2023-06-10-community-day/2023-06-10_PrintedCoin.jpg" class="artistForte modelLink">
-                                    <label>Axew Day Coin by Forte</label>
+                                    <div class="asset-label">
+                                       <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
+                                    </div><label>Axew Day Coin by Forte</label>
                               </a>
                            </div>
                            <div>
@@ -202,29 +204,31 @@
                            <div class="asset">
                               <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
                               <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
-                              <div class="printables-label">
+                              <div class="asset-label">
                                  <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
                               </div>
                               <label>Team Instinct</label>
-                              </a><p>Placeholder Text</p>
+                              </a>
                            </div>
                            <div class="asset">
-                              <a href="https://www.printables.com/model/404206-team-instinct-keyring" target="_blank">
-                                <img src="https://media.printables.com/media/prints/404206/images/3365820_e21059d6-53a4-4d3f-b408-15f2350249f8/thumbs/inside/1920x1440/jpg/e8bfe16d55ab452f49cf9d2dca84e254_display_large_404206.webp">
-                                <div class="printables-link">
-                                  <img src="https://www.printables.com/favicon.ico" alt="Overlay Label">
-                                </div>
-                                <label>Team Instinct</label>
+                              <a href="https://www.printables.com/model/404207-team-mystic-keyring" target="_blank">
+                              <img src="https://media.printables.com/media/prints/404207/images/3365823_ce8cfcc6-9178-4e1f-9332-0b2ee05d083e/thumbs/inside/1280x960/jpg/636b19adac4ebefa18fab57a0236ae20_display_large_404207.webp">
+                              <div class="asset-label">
+                                 <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
+                              </div>
+                              <label>Team Mystic</label>
                               </a>
-                              <p>Placeholder Text</p>
-                            </div>
-                        <div>
+                           </div>
+                           <div class="asset">
                               <a href="https://www.printables.com/model/404208-team-valor-keyring" target="_blank">
                               <img src="https://media.printables.com/media/prints/404208/images/3365826_3dd6a91f-01bb-4c07-903d-b86ba5249432/thumbs/inside/1280x960/jpg/3362d654b5aead3a09b53040414ef73c_display_large_404208.webp">
+                              <div class="asset-label">
+                                 <img src="https://www.printables.com/favicon.ico" alt="Printables Label">
+                              </div>
                               <label>Team Valor</label>
                               </a>
-                              <p>Placeholder Text</p>
-                           </div></div>
+                           </div>
+                        </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End keridel's Keychains -->
