Removing the blank badge icon at the top, further diferentiating us from TSRs asset site

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
                      Community Leaders</span>
                   </h2>
                   <hr style="margin: 20px 25px 25px 25px;border-color: #555;">
-                  <img
-                     src="./img/blankBadge.png" style="height: 80px;float: left;margin: 5px 20px 10px;">
                   <h3
                      style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 14px;font-size: 16px;text-align: left;">
                      Free Graphics for Your Meetups and More!
                   </h3>
                   <p style="margin-bottom:10px;text-align: left;">
                      Welcome to the PoGo Community Checkpoint Assets page! This is where we maintain a comprehensive archive of the assets we share. All our assets are published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means they are for non-commercial use only, unless stated otherwise on an individual asset level. In addition to our own published assets, we occasionally provide links to other valuable assets published elsewhere on the web, benefiting community leaders. We kindly request that you honor the licensing terms set by the artists who have shared their work when accessing such resources.
+                  </p>
+                  <p>
+                    Notice: This project has no affailation with The Silph Road. We're fans of TSR, and were saddened by their sunset. In order to get community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
                   </p>
                   <div class="filters">
                      <div class="filter-section">
