tweaked more things

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                      Welcome to the PoGo Community Checkpoint Assets page! This is where we maintain a comprehensive archive of the assets we share. All our assets are published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means they are for non-commercial use only, unless stated otherwise on an individual asset level. In addition to our own published assets, we occasionally provide links to other valuable assets published elsewhere on the web, benefiting community leaders. We kindly request that you honor the licensing terms set by the artists who have shared their work when accessing such resources.
                   </p>
                   <p>
-                    Notice: This project has no affailation with The Silph Road. We're fans of TSR, and were saddened by their sunset. In order to get community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
+                    Notice: This project has no affailation with The Silph Road. We're fans of TSR, and are saddened by their sunset. In order to give community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
                   </p>
                   <div class="filters">
                      <div class="filter-section">
@@ -84,26 +84,6 @@
                         <label>
                            <input type="radio" name="date" value="2023" checked>
                            <span>2023</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="date" value="2022">
-                           <span>2022</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="date" value="2021">
-                           <span>2021</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="date" value="2020">
-                           <span>2020</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="date" value="2019">
-                           <span>2019</span>
-                         </label>
-                         <label>
-                           <input type="radio" name="date" value="2018">
-                           <span>2018</span>
                          </label>
                        </div>
                      </div>
@@ -236,7 +216,7 @@
                      <!-- Start Silph Assets -->
                      <div class="asset-section" data-type="external">
                         <h5>Asset Resource: <span style="font-family:'texgyreadventorregular';">Silph Road Assets</span></h5>
-                        <p>While TheSilphRoad was still running, they would regularly publish assets for community members to use, while they are no longer publishing assets their previously published assets could still be of use and were published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means you can use the resources however you want as long as it's not for commercial purposes, and that you share alike.</p>
+                        <p>Before The Silph Road announced their sunset, they would regularly publish assets for community leaders to use. While they are no longer publishing assets their previously published assets could still be of use and were published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means you can use the resources however you want as long as it's not for commercial purposes, and that you share alike.</p>
                         <div class="assetGroup">
                            <div>
                               <a href="https://assets.sil.ph/silph-league/" target="_blank">
